# qt-network-test

./: CMakeLists.txt  Node.h  client_main.cpp  server_main.cpp
client/: client.cpp  client.hpp
payload/: Message.h
server/: server.cpp  server.hpp
